[Refactor] : collect(Collectors.toList()) -> toList()로 코드 수정